<resources>
    <string name="app_name">Cardhub</string>
    <string name="cardhub">CardHub</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">"Confirm Password"</string>
    <string name="signupNowMessage">Not signed in yet, sign up now</string>
    <string name="no_internet">Please connect to the internet first.</string>
    <string name="search">Search</string>
    <string name="browse_cards">Cards</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="browse_products">browse_products</string>
    <string name="sort">Sort</string>
    <string name="sort_by_price">Sort by Price</string>
    <string name="view_listings">View Listings</string>
    <string name="browse_product">Products</string>
    <string name="browse_listings">Listings</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="wishlist">Wishlist</string>
    <string name="me">Me</string>
    <string name="base_api_url">Base API URL</string>
    <string name="save">Save</string>
    <string name="theme_switch_title">Switch Theme</string>
    <string name="api_url_icon">API URL Icon</string>
    <string name="theme_switch_icon">Theme Switch Icon</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="cart">Cart</string>
    <string name="increase_quantity">Increase Quantity</string>
    <string name="decrease_quantity">Decrease Quantity</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_username">Enter new username</string>
    <string name="email_john_doe_example_com">Email: john.doe@example.com</string>
    <string name="username_johndoe">Username: JohnDoe</string>
    <string name="my_account">My Account</string>
    <string name="save_email">Save Email</string>
    <string name="save_username">Save Username</string>
    <string name="change_my_settings">Change my Settings</string>
    <string name="log_out">Logout</string>
    <string name="checkout">Checkout</string>
</resources>