<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <!-- LinearLayout Main -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fabSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Base API URL Title with Icon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_link"
                android:contentDescription="@string/api_url_icon"
                android:layout_marginEnd="8dp"
                app:tint="?attr/colorOnSurface"/>

            <TextView
                android:id="@+id/tvURL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_api_url"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurface"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>

        <!-- Base API URL Input -->
        <EditText
            android:id="@+id/etURL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/base_api_url"
            android:inputType="textUri"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textSize="16sp" />

        <!-- Theme Switch Title with Icon -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_theme"
                android:contentDescription="@string/theme_switch_icon"
                android:layout_marginEnd="8dp"
                app:tint="?attr/colorOnSurface"/>

            <TextView
                android:id="@+id/tvTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme_switch_title"
                android:textSize="18sp"
                android:textColor="?attr/colorOnSurface"
                android:fontFamily="sans-serif-medium" />
        </LinearLayout>

        <!-- Theme Switch -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/ivSun"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_sun"
                app:tint="?attr/colorOnSurface"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/themeSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:thumbTint="?attr/colorOnSurface"
                android:trackTint="?attr/colorOnSurface"
                android:layout_marginStart="10dp"
                android:scaleX="1.3"
                android:scaleY="1.3" />

            <ImageView
                android:id="@+id/ivMoon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_moon"
                app:tint="?attr/colorOnSurface" />
        </LinearLayout>
    </LinearLayout>

    <!-- FloatingActionButton -->
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/fabSave"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/ic_save"
        android:contentDescription="@string/save"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="?attr/colorPrimary"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:padding="16dp"
        app:maxImageSize="56dp"
        android:background="@drawable/circular_background"
        android:onClick="onClickSave"/>

</androidx.constraintlayout.widget.ConstraintLayout>
